--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<header>
 		<h1>Galería <b class="color__neon-1">N</b><b class="color__neon-2">e</b><b class="color__neon-3">ó</b><b class="color__neon-4">n</b></h1>
 		<div class="menu__responsive menu__responsive-header">
-			<a href="#" target= "__BLANK" class="hover__color-1"><img class="logo__border-1" src="ico/lucalamorte.png"></a>
+			<a href="https://lucalamorte.github.io/lucalamorte/" target= "__BLANK" class="hover__color-1"><img class="logo__border-1" src="ico/lucalamorte.png"></a>
 			<a href="https://www.linkedin.com/in/lclamorte/" target= "__BLANK" class="hover__color-2"><img class="logo__border-2" src="ico/linkedin.png"></a>
 			<a href="https://github.com/lucalamorte" target= "__BLANK" class="hover__color-3"><img class="logo__border-3" src="ico/github.png"></a>
 		</div>
@@ -62,7 +62,7 @@
 	</div>
 	<footer>
 		<div class="menu__responsive menu__responsive-footer">
-			<a href="#" target= "__BLANK" class="hover__color-1"><img class="logo__border-1" src="ico/lucalamorte.png"></a>
+			<a href="https://lucalamorte.github.io/lucalamorte/" target= "__BLANK" class="hover__color-1"><img class="logo__border-1" src="ico/lucalamorte.png"></a>
 			<a href="https://www.linkedin.com/in/lclamorte/" target= "__BLANK" class="hover__color-2"><img class="logo__border-2" src="ico/linkedin.png"></a>
 			<a href="https://github.com/lucalamorte" target= "__BLANK" class="hover__color-3"><img class="logo__border-3" src="ico/github.png"></a>
 		</div>
